compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__bitwise_op_wrong_type_not.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "\n    var r : real\n    var _r := not r\n"

---
"r"@(FileId(1), 9..10) [Declared]: ref_mut real
"_r"@(FileId(1), 26..28) [Declared]: ref_mut <error>
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 32..35: mismatched types for logical `not`
| note in file FileId(1) for 36..37: this is of type `real`
| error in file FileId(1) for 32..35: cannot apply logical `not` to `real`
| info: operand must be an integer or boolean
